--- a/Task01/Task01/Content/Site.css
+++ b/Task01/Task01/Content/Site.css
@@ -40,3 +40,7 @@ input[type="checkbox"].input-validation-error {
 .validation-summary-valid {
     display: none;
 }
+
+.login-panel {
+    margin-top: 25%;
+}
