--- a/Task01/Task01/Content/bootstrap.css
+++ b/Task01/Task01/Content/bootstrap.css
@@ -5035,6 +5035,18 @@ a.thumbnail:focus {
   color: inherit;
 }
 
+.alert-cell-alt-first {
+  color: #101c7d;
+  background-color: #d9edf7;
+  border-color: #555555;
+}
+
+.alert-cell-alt-second {
+  color: #0f460f;
+  background-color: #e0f1da;
+  border-color: #d6e9c6;
+}
+
 .alert-success {
   color: #468847;
   background-color: #dff0d8;
@@ -5050,7 +5062,7 @@ a.thumbnail:focus {
 }
 
 .alert-info {
-  color: #3a87ad;
+  color: #5bc0de;
   background-color: #d9edf7;
   border-color: #bce8f1;
 }
