--- a/Task01/Task01/Views/Projects/Edit.cshtml
+++ b/Task01/Task01/Views/Projects/Edit.cshtml
@@ -6,7 +6,6 @@
 
 <h2>Edit</h2>
 
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -60,7 +59,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ProjectStatus, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ProjectStatus)
+                @Html.EnumDropDownListFor(model => model.ProjectStatus)
                 @Html.ValidationMessageFor(model => model.ProjectStatus)
             </div>
         </div>
@@ -76,7 +75,3 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
