--- a/Task01/Task01/Views/Projects/Index.cshtml
+++ b/Task01/Task01/Views/Projects/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Task01.Models.Project
+﻿@model IEnumerable<Task01.Models.Project>
 
 @{
     ViewBag.Title = "Index";
@@ -6,61 +6,78 @@
 
 <h2>Index</h2>
 
-<div>
-    <h4>Project</h4>
-	<hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.DeveloperCount)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DeveloperCount)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ProjectTitle)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ProjectTitle)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ProjectManager)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ProjectManager)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.StartDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.StartDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.FinishedDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.FinishedDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ProjectStatus)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ProjectStatus)
-        </dd>
-
-    </dl>
-</div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ProjectID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Create New", "Create")
 </p>
+<table class="table">
+    <tr>
+        <th>
+            #
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DeveloperCount)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ProjectTitle)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ProjectManager)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.StartDate)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.FinishedDate)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ProjectStatus)
+        </th>
+        <th></th>
+    </tr>
+    @{
+        int rowNum = 0;
+        string className;
+
+        foreach (var item in Model)
+        {
+
+            if (rowNum % 2 == 0)
+            {
+                className = "alert-cell-alt-first";
+            }
+            else
+            {
+                className = "alert-cell-alt-second";
+            }
+
+            <tr class="@className">
+                <td>
+                    @(++rowNum)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DeveloperCount)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ProjectTitle)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ProjectManager)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.StartDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FinishedDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ProjectStatus)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.ProjectID }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.ProjectID }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.ProjectID })
+                </td>
+            </tr>
+        }
+    }
+</table>
