page title removed

--- a/Task01/Task01/Views/Home/Index.cshtml
+++ b/Task01/Task01/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Task01.Models.Project>
 @{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Home";
 }
 
 <div class="jumbotron">
